--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"webpack-dev-server --content-base build/"
+    "dev": "webpack-dev-server --content-base build/",
+    "server": "nodemon ./backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,17 @@
   },
   "homepage": "https://github.com/kevinbaru/reactapp1#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "mongoose": "^4.11.1",
+    "mongoose-connect": "0.0.3",
+    "nodemon": "^1.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^2.6.1"
